security patch check

--- a/test/server-to-peer/case-study1/index.html
+++ b/test/server-to-peer/case-study1/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/hydrolang@1.1.7/hydrolang.js"></script>
 </head>
 
 <body>
@@ -68,6 +67,7 @@
 
 </body>
 <script src="./node_modules/hydro-rtc/build/hydrortcclient.js"></script>
+<script src="./node_modules/hydrolang/hydrolang.js"></script>
 <script>
 
     let hydroRtcClient = null
